--- a/API/InteliHealth/InteliHealth/InteliHealth.csproj
+++ b/API/InteliHealth/InteliHealth/InteliHealth.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.12.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="StaticFiles\Images\" />
+  </ItemGroup>
+
 </Project>
